[package]
name = "limit"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
ifcfg = "0.1.2"
macro-log = "0.3.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
